layout bug fix

--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -39,7 +39,8 @@ $rule: thin solid $palette--light-gray;
 }
 
 // Material layout bug fix
-[layout-sm=column] { display: block; } 
+[layout=column] { display: block; }
+[layout-sm=column] { display: block; }
 
 // Main styles
 body {
